fix(export): rapports Excel complets (KPIs + toutes les répartitions)
L'export Excel d'un rapport ne contenait qu'un seul tableau (ex. activité =
uniquement « par département », 1 ligne). Désormais writer multi-sections
(ExcelExportService.toSectionsXlsx) :
- Activité : Indicateurs (consultations/RDV/nouveaux patients/labo/admissions) + par département
- Épidémiologie : total + pathologies + âge + sexe + département
- Financier : Indicateurs (facturé/encaissé/dû/nb) + par mode de paiement
Montants en cellules numériques (sommables dans Excel).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>